--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -1,3 +1,4 @@
+
 div.FollowUs {
     display: none !important;
 }
@@ -236,17 +237,16 @@ span.vtprmd {
 
 div.Bod.ScrlV.Fl {
   background-color: #2f353a !important;
+  
 }
 
 div.Logo {
   background-color: #2f353a !important;
   color: #F5FFFA !important;
 }
-
 div.Image  {
     background-color: #2f353a !important;
-}
-
+	}
 button.btn.btn-sm.btn-primary {
   background-color: #2f353a !important;
   color: #F5FFFA !important; !important;
@@ -271,6 +271,7 @@ a.Active {
 a.BtnNw.CVst.BxSdw.fa-eye-slash {
   background-color: #2f353a !important;
   color: #e06666 !important;
+  
 }
 
 a.BtnNw.Pndng.BxSdw.fa-times {
@@ -286,3 +287,24 @@ a.Button.Sm {
 ul.ListUser {
   background-color: #2f353a !important;
 }
+
+div.Description {
+  background-color: #2f353a !important;
+  color: #F5FFFA !important;  
+}
+
+a.Button.StylC.ShwMr.Alt {
+ color: #2f353a !important;
+   background-color: #F5FFFA !important; 
+}
+
+a.Pndnt.fa-bookmark {
+   color: #2f353a !important;
+   background-color: #F5FFFA !important; 
+}
+
+a.AnmQv.fa-play {
+     color: #2f353a !important;
+   background-color: #F5FFFA !important; 
+}
+
