--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -308,3 +308,7 @@ a.AnmQv.fa-play {
    background-color: #F5FFFA !important; 
 }
 
+div.DpdwCnt.TtCn {
+    background-color: #2f353a !important;
+    color: #F5FFFA !important;
+}
