--- a/AdGuard/Extensiones/Google/css.css
+++ b/AdGuard/Extensiones/Google/css.css
@@ -1,3 +1,4 @@
+`
 .L3eUgb {
 	background: url(https://images5.alphacoders.com/121/1217672.jpg) center center !important;
 	background-size: cover !important;
@@ -23,3 +24,4 @@ a.MV3Tnb {
 div.uU7dJb {
   display: none;
 }
+`
