--- a/AdGuard/Extensiones/Google/css.css
+++ b/AdGuard/Extensiones/Google/css.css
@@ -1,6 +1,6 @@
 `
 .L3eUgb {
-	background: url(https://images5.alphacoders.com/121/1217672.jpg) center center !important;
+	background: url(https://images5.alphacoders.com/121/1217672.jpg) center center !important;////vieja https://images7.alphacoders.com/333/thumb-1920-333580.jpg
 	background-size: cover !important;
 }
 .o3j99 {
