--- a/AdGuard/Extensiones/Google/css.css
+++ b/AdGuard/Extensiones/Google/css.css
@@ -1,6 +1,5 @@
-`
 .L3eUgb {
-	background: url(https://images5.alphacoders.com/121/1217672.jpg) center center !important;////vieja https://images7.alphacoders.com/333/thumb-1920-333580.jpg
+	background: url(https://images5.alphacoders.com/121/1217672.jpg) center center !important;
 	background-size: cover !important;
 }
 .o3j99 {
@@ -24,4 +23,3 @@ a.MV3Tnb {
 div.uU7dJb {
   display: none;
 }
-`;
