--- a/AdGuard/Extensiones/Google/css.css
+++ b/AdGuard/Extensiones/Google/css.css
@@ -6,20 +6,20 @@
   background: transparent !important;
 }
 div.gb_ua.gb_3d.gb_6a.gb_aa.gb_Fc.gb_Rc {
-  opacity: 35%;
+  opacity: 35% !important;
 }
 div.KxwPGc.SSwjIe {
-  display: none
+  display: none !important;
 }
 
 #SIvCob {
-  display: none;
+  display: none !important;
 }
 
 a.MV3Tnb {
-  display: none;
+  display: none !important;
 }
 
 div.uU7dJb {
-  display: none;
+  display: none !important;
 }
