--- a/AdGuard/Extensiones/Google/css.css
+++ b/AdGuard/Extensiones/Google/css.css
@@ -23,3 +23,12 @@ a.MV3Tnb {
 div.uU7dJb {
   display: none !important;
 }
+
+a.MV3Tnb {
+  display: none !important;
+  
+}
+
+div.gb_Fa.gb_6d.gb_8a.gb_g.gb_Jc.gb_Uc {
+  background-color: #00000000 !important;
+}
