--- a/AdGuard/Extensiones/Google/css.css
+++ b/AdGuard/Extensiones/Google/css.css
@@ -26,9 +26,12 @@ div.uU7dJb {
 
 a.MV3Tnb {
   display: none !important;
-  
 }
 
 div.gb_Fa.gb_6d.gb_8a.gb_g.gb_Jc.gb_Uc {
+  background-color: #00000000 !important;
+}
+
+div.gb_Fa.gb_Ed.gb_8a.gb_g.gb_Jc.gb_Uc {
   background-color: #00000000 !important;
 }
