--- a/AdGuard/Extensiones/Google/css.css
+++ b/AdGuard/Extensiones/Google/css.css
@@ -35,3 +35,7 @@ div.gb_Fa.gb_6d.gb_8a.gb_g.gb_Jc.gb_Uc {
 div.gb_Fa.gb_Ed.gb_8a.gb_g.gb_Jc.gb_Uc {
   background-color: #00000000 !important;
 }
+
+div.gb_Ia.gb_n.gb_ab.gb_g.gb_Lc.gb_Wc {
+    background-color: #00000000 !important;
+}
