--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -1,3 +1,11 @@
+div.div-84413 {
+  display: none !important;
+}
+
+div.AnflvTl {
+  display: none !important;
+}
+
 div.Bg {
   display: none !important;
 }
