--- a/AdGuard/Extensiones/Google/css.css
+++ b/AdGuard/Extensiones/Google/css.css
@@ -2,6 +2,9 @@
   background: url(https://raw.githubusercontent.com/CarolusV/Hosts/master/AdGuard/Extensiones/Google/wallpapers/1.jpg) center center !important;
   background-size: cover !important;
 }
+div.gb_Ia.gb_f.gb_ab.gb_i.gb_Lc.gb_nd.gb_Wc {
+  background: transparent !important;
+}
 .o3j99 {
   background: transparent !important;
 }
