--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -9,7 +9,212 @@ div.AnflvTl {
 div.Bg {
   display: none !important;
 }
+div.Body {
+  background-color: #2f353a !important;
+}
 
+h1.Title {
+  color: #F5FFFA !important !important;
+}
+
+nav.Brdcrmb.fa-home {
+  color: #F5FFFA !important !important;
+}
+
+div nav a {
+  color: #F5FFFA !important !important;
+}
+
+h2.SubTitle {
+  color: #F5FFFA !important !important;
+}
+
+div.CapOptns.ClFx.show {
+  background-color: #2f353a !important;
+}
+
+a.BtnNw.Rprt.BxSdw.fa-flag-o {
+  background-color: #2f353a !important;
+  color: #F5FFFA !important;
+}
+
+a.BtnNw.CVst.BxSdw.fa-eye {
+  background-color: #2f353a !important;
+}
+
+span.BtnNw.Clgt.BxSdw.lgtbx-lnk.fa-lightbulb-o {
+  background-color: #2f353a !important;
+}
+
+i.fa-expand {
+  background-color: #2f353a !important;
+}
+
+a.BtnNw.CVst.BxSdw.fa-eye-slash {
+  background-color: #2f353a !important;
+  color: #a61c00 !important;
+}
+
+section.WdgtCn {
+  background-color: #2f353a !important;
+  
+}
+
+a.BtnNw.AdFv.BxSdw.fa-heart {
+  background-color: #2f353a !important;
+  color: #F5FFFA !important;
+}
+
+a.BtnNw.Fllw.B.BxSdw.fa-thumbs-o-down {
+  background-color: #2f353a !important;
+  color: #F5FFFA !important;
+}
+
+a.BtnNw.Pndng.BxSdw.fa-bookmark {
+  background-color: #2f353a !important;
+}
+
+div figure img {
+  background-color: #2f353a !important;
+  color: #2f353a !important;
+}
+
+div.Bg {
+  background-color: #2f353a !important;
+  display: none !important;
+}
+
+aside.SidebarA.BFixed {
+  background-color: #2f353a !important;
+}
+
+div.Title {
+  color: #F5FFFA !important;
+}
+
+h3.Title {
+  color: #F5FFFA !important;
+}
+
+li a p {
+  color: #F5FFFA !important;
+}
+
+span.TxtAlt {
+  color: #F5FFFA !important;
+}
+
+div div div {
+  color: #F5FFFA !important;
+}
+
+button.multiselect.dropdown-toggle.btn.btn-sm.btn-default {
+  background-color: #2f353a !important;
+}
+
+span.multiselect-selected-text {
+  color: #F5FFFA !important;
+  
+}
+
+div div h1 {
+  color: #F5FFFA !important;
+}
+
+div.Title.Page.fa-star.B12 {
+  display: none !important;
+}
+
+ul li a {
+  color: #F5FFFA !important;
+  background-color: #2f353a !important;
+}
+
+div.Wdgt.User {
+  background-color: #2f353a !important;
+}
+
+div.Description {
+  background-color: #2f353a !important;
+}
+
+div div p {
+  color: #ffffff !important;
+  background-color: #2f353a !important;
+}
+
+div strong a {
+  color: #ffffff !important;
+  background-color: #2f353a !important;
+}
+
+section ul li {
+  background-color: #2f353a !important;
+}
+
+section.WdgtCn.LstStylPs {
+  background-color: #2f353a !important;
+}
+
+div.Title.Page.fa-star {
+  display: none !important;
+}
+
+div.AnimeCover {
+  background-color: #2f353a !important;
+}
+
+main.Main {
+  background-color: #2f353a !important;
+}
+
+div.Image {
+  background-color: #2f353a !important;
+}
+
+span.fa-tv {
+  background-color: #274e13 !important;
+}
+
+div a span {
+  color: #F5FFFA !important;
+  background-color: #2f353a !important;
+}
+
+a.BtnNw.Pndng.BxSdw.fa-times {
+  background-color: #2f353a !important;
+}
+
+section.WdgtCn.Sm {
+  background-color: #2f353a !important;
+  display: none !important;
+}
+
+input.form-control {
+  background-color: #2f353a !important;
+  color: #F5FFFA !important;
+}
+
+#sortEpisodes {
+  background-color: #2f353a !important;
+}
+
+div.Bot.hidden-xs.hidden-sm {
+  background-color: #2f353a !important;
+}
+
+span.Estreno {
+  display: none !important;
+}
+
+span.Stts {
+  color: #F5FFFA !important;
+}
+
+div.Image.fa-play-circle-o {
+  background-color: #2f353a !important;
+  
+}
 a.lvbx {
   display: none !important;
 }
