--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -265,7 +265,7 @@ div.Image  {
 
 button.btn.btn-sm.btn-primary {
   background-color: #2f353a !important;
-  color: #F5FFFA !important; !important;
+  color: #F5FFFA !important;
 }
 
 div.AnimeCover {
